# milq

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  milp.py  preliminary_results.json  pyproject.toml  run_example_problem.py  run_experiments.py  solution_explorer.py  train_network.py
.github/workflows/: ci.yml
data/: benchmark.py  milp.py  scheduling.lp  scheduling.sol  solution_explorer.py  table.py
data/benchmark/: __init__.py  benchmark.py  evaluate_baseline.py  generate_baseline_schedules.py  generate_milp_schedules.py  heuristic_benchmark.py  heuristic_processing.py  processing.py  types.py  visualization.py
data/example/: __init__.py  example_problem.py  solution_explorer.py  table.py
data/results/: benchmark_results_default.json  benchmark_results_integer.json
src/circuits/: __init__.py  ghz.py  subcircuit.py
src/common/: __init__.py  experiment.py  ibmq_backend.py  ipmq_backend.py
src/provider/: __init__.py  accelerator.py  accelerator_group.py  generate_schedule.py  scheduler.py
src/resource_estimation/: __init__.py
src/resource_estimation/device/: __init__.py  predict_device.py
src/resource_estimation/noise/: __init__.py  estimate_noise.py
src/resource_estimation/running/: __init__.py  convert.py  estimate.py  query.py  workspace.py
src/scheduling/: __init__.py  baseline_schedule.py  bin_schedule.py  branch_and_bound.py  calculate_makespan.py  extended_schedule.py  extract_schedule.py  generate_schedule.py  schedule.py  scheduler.py  setup_lp.py  simple_schedule.py  solve_lp.py  tabu_search.py  types.py
src/scheduling/common/: __init__.py  binpacking.py  convert.py  create_jobs.py  estimate.py  evaluate.py  (+3 more)
src/tools/: __init__.py  assembling.py  combine.py  cutting.py  mapping.py  optimizing.py  reconstructing.py  subcircuit.py
src/utils/: __init__.py  helpers.py
tests/helpers/: ghz.py
tests/integration/: test_tools.py
tests/provider/: accelerator_group_test.py  accelerator_test.py  test_accelerator.py  test_accelerator_group.py  test_generate_schedule.py  test_scheduling.py
tests/scheduling/: test_generate_schedule.py  test_scheduling.py
tests/tools/: test_assembling.py  test_cutting.py  test_mapping.py  test_reconstructing.py
(+21 files in other folders)
