[project]
name = "cutting-scheduler"
version = "0.1.0"
description = "A project implementing a minimal scheduler, which is aware of circuit cutting."
authors = [
    {name = "Philipp Seitz", email = "philipp.seitz@tum.de"},
]
dependencies = [
    "qiskit>=0.44.1",
    "networkx>=3.1",
    "qiskit-aer>=0.12.2",
    "circuit-knitting-toolbox>=0.4.0",
    "mqt-qmap>=2.4.0",
    "numpy>=1.25.2",
    "pulp>=2.7.0",
    "pandas>=2.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "pylint>=2.17.5",
]
